--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,6 +8,7 @@ output:
 ```{r loading_libraries}
 library(plyr)
 library(dplyr)
+library(ggplot2)
 ```
 
 ```{r}
@@ -86,3 +87,16 @@ The mean steps taken per day are `r mean_steps_imputed` (without imputing values
 The median steps taken per day are `r median_steps_imputed` (without imputing values it was `r median_steps`).
 
 ## Are there differences in activity patterns between weekdays and weekends?
+Add a real date column and calculate if the date is a weekend day or a weekday day.
+```{r}
+activity_imputed_date <- mutate(activity_imputed, date_Date = as.Date(date), weekday = weekdays(date_Date, abbreviate = TRUE), weekend = factor(1 * (weekday %in% c("Sa", "So")), labels = c("weekday", "weekend")))
+head(activity_imputed_date)
+```
+
+Now look at the difference between weekdays and weekend.
+```{r weekend_pattern}
+activity_imputed_by_interval <- group_by(activity_imputed_date, interval, weekend)
+activity_imputed_mean_by_interval <- summarise(activity_imputed_by_interval, mean_steps = mean(steps, na.rm = TRUE))
+g <- ggplot(activity_imputed_mean_by_interval, aes(interval, mean_steps))
+g + geom_line() + facet_grid(weekend ~ .)
+```
